--- a/back/yogiotte/src/main/resources/application.properties
+++ b/back/yogiotte/src/main/resources/application.properties
@@ -1,1 +1,26 @@
+spring.config.import=classpath:db.properties
 spring.application.name=yogiotte
+
+spring.mvc.view.prefix=/WEB-INF/
+spring.mvc.view.suffix=.jsp
+
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=${db.url}
+spring.datasource.username=${db.username}
+spring.datasource.password=${db.password}
+
+##file upload 기능
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=20MB
+
+spring.messages.basename=message.message
+
+# jpa 설정 
+spring.jpa.database=oracle
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+
+logging.level.org.hibernate=info
