--- a/back/yogiotte/src/main/resources/application.properties
+++ b/back/yogiotte/src/main/resources/application.properties
@@ -1,1 +1,32 @@
+spring.config.import=classpath:db.properties
 spring.application.name=yogiotte
+
+# jsp 파일을 처리하기 위한 View Resolver (prefix, suffix 추가)
+spring.mvc.view.prefix=/WEB-INF/
+spring.mvc.view.suffix=.jsp
+
+# JDBC 드라이버 설정
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+# file upload 기능 설정
+# max-file-size (파일 1개당 최대 사이즈 범위 설정)
+# max-request-size (파일 여러개 올릴때 총 사이즈 범위 설정)
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=20MB
+
+# 메세지 등록
+spring.messages.basename=message.message
+
+# Mybatis 설정 등록  classpath: src/main/resources
+# mybatis.config-location=classpath:mybatis-config.xml
+# mybatis.mapper-locations=classpath:mappers/**/*.xml
+
+# JPA 환경 설정
+spring.jpa.database=oracle
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+
+logging.level.org.hibernate=info
