--- a/back/yogiotte/src/main/resources/application.properties
+++ b/back/yogiotte/src/main/resources/application.properties
@@ -22,5 +22,5 @@ spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-
+logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate=info
